fix zoom in on search abr on small medias

--- a/src/style.css
+++ b/src/style.css
@@ -72,7 +72,7 @@ main{
 
     form{
         display:flex;
-       justify-content: center;
+        justify-content: center;
         align-items: center;
         gap:0.5rem;
 
@@ -81,8 +81,10 @@ main{
         }
 
         #weather-search{
+            font-size: 16px;
             border-radius: 2rem;
             padding:0.8rem;
+            margin-left:1rem;
             border: none;
             outline: none;
             height: 2rem;
@@ -140,23 +142,20 @@ header{
 }
 
 .footer{
-    display: flex;
-    color:white;    
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    padding: 0.3rem;
+    font-family: monospace;
+    transition: 0.6s all ease-in-out;
+    display:flex;
     justify-content: center;
-    text-align: center;
-    text-wrap-style: pretty;
-    align-items: center;
-    flex-direction: row;
-    background-color: #061826;
-    width: 100vw;
-    margin:0px;
-    text-decoration:wavy;
-    font-size: 0.7rem;
+    background-color:#1b998a41 ;
     
     .footer-link{
         text-decoration: none;
         align-items: center;
-        color: white;
+        color: black;
         text-shadow:  1px 1px rgba(0, 0, 0, 0.5);
         display:flex;
         transition: 0.2s all ease-in-out;
@@ -164,7 +163,6 @@ header{
 
         .icons.github {
             transition: 0.2s all ease-out;
-            filter: invert(99%) sepia(1%) saturate(2975%) hue-rotate(190deg) brightness(94%) contrast(108%);
         }
 
         .icons.github:hover{
